Add puzzle input and use AssertJ assertions
Co-authored-by: Mark Crossfield <mark.crossfield@autotrader.co.uk>